examples/hello-world/react/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-react
  namespace: apps
spec:
  selector:
    app: hello-react
  ports:
    - port: 80
      targetPort: 8080
